-improved comment warning for moves-move-activity facets  -fixed bootstrap issue with collapsed navbar

--- a/fluxtream-web/src/main/webapp/less/bootstrapCustomizations.less
+++ b/fluxtream-web/src/main/webapp/less/bootstrapCustomizations.less
@@ -40,8 +40,13 @@
   color: inherit;
 }
 
+
+.navbar .nav > li > a {
+  background-color: transparent !important;
+}
+
 .navbar .nav > li > a:hover {
-  background-color: transparent;
+  background-color: transparent !important;
   color: #fff;
   text-decoration: none;
 }
@@ -101,4 +106,21 @@ h1, h2, h3, h4, h5, h6{
 
 .icon-white, .nav-pills>.active>a>[class^="icon-"], .nav-pills>.active>a>[class*=" icon-"], .nav-list>.active>a>[class^="icon-"], .nav-list>.active>a>[class*=" icon-"], .navbar-inverse .nav>.active>a>[class^="icon-"], .navbar-inverse .nav>.active>a>[class*=" icon-"], .dropdown-menu>li>a:hover>[class^="icon-"], .dropdown-menu>li>a:focus>[class^="icon-"], .dropdown-menu>li>a:hover>[class*=" icon-"], .dropdown-menu>li>a:focus>[class*=" icon-"], .dropdown-menu>.active>a>[class^="icon-"], .dropdown-menu>.active>a>[class*=" icon-"], .dropdown-submenu:hover>a>[class^="icon-"], .dropdown-submenu:focus>a>[class^="icon-"], .dropdown-submenu:hover>a>[class*=" icon-"], .dropdown-submenu:focus>a>[class*=" icon-"]{
   background-image:none;
+}
+
+.btn.btn-navbar{
+  background-color: #2c2c2c;
+  background-image: -ms-linear-gradient(top,#333,#222);
+  background-image: -webkit-gradient(linear,0 0,0 100%,from(#333),to(#222));
+  background-image: -webkit-linear-gradient(top,#333,#222);
+  background-image: -o-linear-gradient(top,#333,#222);
+  background-image: linear-gradient(top,#333,#222);
+  background-image: -moz-linear-gradient(top,#333,#222);
+  background-repeat: repeat-x;
+  border-color: #222 #222 #000;
+  border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0,0,0,0.25);
+}
+
+.btn.btn-navbar:hover{
+  background-color:#222;
 }
