--- a/fluxtream-web/src/main/webapp/less/flx.less
+++ b/fluxtream-web/src/main/webapp/less/flx.less
@@ -611,6 +611,11 @@ table .remove { text-align:center;
 }
 .facetDetails {
     overflow:hidden; height:100%;
+
+  .commentWarning{
+    padding-top: 10px;
+    font-style: italic;
+  }
 }
 .facetDetails.many {
     margin-bottom: 10px;
